# mapreduce

./: .gitmodules  CMakeLists.txt  README.md  library.h
demo/: CMakeLists.txt  demo.cpp
mapreduce/: CMakeLists.txt  calldata_mapper.cpp  calldata_mapper.h  calldata_reducer.cpp  calldata_reducer.h  map_reduce.cpp  map_reduce.h  mapper.cpp  mapper.h  master.cpp  master.h  reducer.cpp  reducer.h  task.h  worker.cpp  worker.h  worker_identity.h
mapreduce/proto/: CMakeLists.txt  master.proto  worker.proto
